Fixing Overflow

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,8 @@ body {
   font-size: 1.6rem;
   font-family: "Titillium Web", sans-serif;
   overflow-x: hidden;
-  /* width: 100vw; */
+
+  width: 100vw;
 }
 a {
   text-decoration: none;
